objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>LEFT( Subject , FIND(&quot; &quot;, Subject ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_By_Prospect_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark a meeting booked by a prospect from an online booking link or from your website. It will be checked if booked by the prospect themselves via an online link. It is unchecked if the meeting is booked via the Instant Booker by one of your users.</description>
        <label>Booked by Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track which user booked a meeting</description>
        <label>Booked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canceled_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track if a meeting was canceled</description>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designated_Assignee_CP__c</fullName>
        <description>Writes the value of the user within the queue who was Next Up within the Queue if a Round Robin, or the record owner if an Ownership-based Queue. When the current assignee was Next Up, this field will not be populated.</description>
        <label>Next Designated Assignee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gong__Gong_Selected_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gong Selected Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meeting_Series_CP__c</fullName>
        <description>Track that an Event was booked via a Meeting Series - Optional for Meeting Series Use-Case*</description>
        <label>Meeting Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Type_CP__c</fullName>
        <description>Meeting Type (as setup under your team Meeting Templates List)</description>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Show_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prospect didn’t show up. Maps against no show button</description>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Attributable_Sequence_Name__c</fullName>
        <description>Outreach will attribute a task to the most recently finished sequence if the task is not associated with an active Sequence.</description>
        <label>Attributable Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Call_Direction__c</fullName>
        <description>Identifies if the call was inbound or outbound.</description>
        <label>Call Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Call_Disposition_Name__c</fullName>
        <description>Identifies the call disposition name as created by the Outreach Admin.</description>
        <label>Call Disposition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Call_Purpose_Name__c</fullName>
        <description>Identifies the purpose of the call as set by the Outreach Admin.</description>
        <label>Call Purpose Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Open_Count__c</fullName>
        <description>Identifies the total number of opens the email received.</description>
        <label>Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Opened_At__c</fullName>
        <description>Identifies the date and time the email was first opened.</description>
        <label>Opened At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outreach_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Replied_At__c</fullName>
        <description>Identifies the date and time when the mail was replied to.</description>
        <label>Replied At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outreach_Sequence_Name__c</fullName>
        <label>Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Sequence_Step_Number__c</fullName>
        <description>Identifies the step number of the Sequence.</description>
        <label>Sequence Step Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Template_Name__c</fullName>
        <description>Identifies the Template Name of a template sent with the email. 
Note: Only applicable if using a template.</description>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name_CP__c</fullName>
        <description>Track the Queue a Meeting was Booked from</description>
        <label>Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rescheduled_CP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Track how many times a meeting was rescheduled</description>
        <label># Rescheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Status_CP__c</fullName>
        <description>Track if an Event is Accepted, Declined, NotResponded, or Maybe/Tentative.
Values: Accepted, Declined, NotResponded, Maybe (Google specific), Tentative (MS O365 Specific)
Note: You do not need to add the Values above in your setup.</description>
        <label>Response Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Name_CP__c</fullName>
        <description>Track the Router a Meeting was Booked from. This value only writes when a meeting is booked via &quot;Concierge || Inbound Router&quot;, otherwise the value will be null.</description>
        <label>Router Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_CC_Email_Addresses__c</fullName>
        <label>TopBox CC Email Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TopBoxWG__TopBox_Send_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TopBox Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Action_Id__c</fullName>
        <description>Used by triggers to keep Actions/Tasks and Events in Sync</description>
        <label>Action Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Time_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Calendar Converter Page on Timesheet</description>
        <label>Time Log</label>
        <referenceTo>amc__Time_Log__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Event_Code__c</fullName>
        <inlineHelpText>Code used to identify each type of PaymentConnect event notification task</inlineHelpText>
        <label>Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Emails</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Emails</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>